Expand theory library with practice drills, roadmap, and accuracy fixes
Adds a top-level study roadmap, three new algorithm files
(bit manipulation, math/number theory, string algorithms), four new
system-design pattern files (consensus-and-quorums, concurrency-control,
streaming-semantics, api-design-and-pagination), full node_world/
stack, and worked-solution diagrams across core/data_streaming/
infrastructure/product/reliability tracks.

Reworks java_world/11-java-versions-evolution.md as a LTS-focused
interview sheet, expands concurrency and database files with
practice/debugging drills, and upgrades system_design/
interview-practice-tasks.md with rubrics, time budgets, and twist cards.

Fixes prior accuracy issues: JEP 505 is still preview in JDK 25 (not
GA); Redis Cluster is AP, not CP; Express 5 uses path-to-regexp v8
named-splat syntax; idempotency example now type-safe; ETag example
uses strong validators for If-Match; csurf flagged as archived;
Cosmos DB for PostgreSQL disambiguated from Cosmos DB NoSQL APIs;
binary-search rightmostTrue template aligned with its comment;
Collectors.teeing example now compiles; regionMatches uses positional
args.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>